--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^2.3.3",
     "next": "12.0.4",
     "next-auth": "^3.29.0",
+    "node-telegram-bot-api": "^0.54.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
