--- a/package.json
+++ b/package.json
@@ -13,18 +13,15 @@
     "@emotion/styled": "^11",
     "bcrypt": "^5.0.1",
     "framer-motion": "^4",
-    "fs": "^0.0.1-security",
     "knex": "^0.95.14",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
-    "net": "^1.0.2",
     "next": "12.0.4",
     "next-auth": "^3.29.0",
     "node-telegram-bot-api": "^0.54.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "tls": "^0.0.1"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
